--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ astroid==2.11.6
 atomicwrites==1.4.0
 attrs==21.4.0
 autopep8==1.6.0
+certifi==2022.6.15
 cfgv==3.3.1
+charset-normalizer==2.0.12
 colorama==0.4.5
 dill==0.3.5.1
 distlib==0.3.4
 filelock==3.7.1
 identify==2.5.1
+idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
 lazy-object-proxy==1.7.1
@@ -23,9 +26,11 @@ pylint==2.14.3
 pyparsing==3.0.9
 pytest==7.1.2
 PyYAML==6.0
+requests==2.28.0
 six==1.16.0
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.0
+urllib3==1.26.9
 virtualenv==20.14.1
 wrapt==1.14.1
