--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.0.12
 colorama==0.4.5
 dill==0.3.5.1
 distlib==0.3.4
+Faker==13.14.0
 filelock==3.7.1
 identify==2.5.1
 idna==3.3
@@ -25,6 +26,7 @@ pycodestyle==2.8.0
 pylint==2.14.3
 pyparsing==3.0.9
 pytest==7.1.2
+python-dateutil==2.8.2
 PyYAML==6.0
 requests==2.28.0
 requests-mock==1.9.3
