--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.1
 astroid==2.11.6
 atomicwrites==1.4.0
 attrs==21.4.0
@@ -5,11 +6,14 @@ autopep8==1.6.0
 certifi==2022.6.15
 cfgv==3.3.1
 charset-normalizer==2.0.12
+click==8.1.3
 colorama==0.4.5
 dill==0.3.5.1
 distlib==0.3.4
 Faker==13.14.0
+fastapi==0.78.0
 filelock==3.7.1
+h11==0.13.0
 identify==2.5.1
 idna==3.3
 iniconfig==1.1.1
@@ -23,6 +27,7 @@ pluggy==1.0.0
 pre-commit==2.19.0
 py==1.11.0
 pycodestyle==2.8.0
+pydantic==1.9.1
 pylint==2.14.3
 pyparsing==3.0.9
 pytest==7.1.2
@@ -31,9 +36,13 @@ PyYAML==6.0
 requests==2.28.0
 requests-mock==1.9.3
 six==1.16.0
+sniffio==1.2.0
+starlette==0.19.1
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.0
+typing_extensions==4.2.0
 urllib3==1.26.9
+uvicorn==0.18.1
 virtualenv==20.14.1
 wrapt==1.14.1
