--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.11.6
 atomicwrites==1.4.0
 attrs==21.4.0
 autopep8==1.6.0
+Cerberus==1.3.4
 certifi==2022.6.15
 cfgv==3.3.1
 charset-normalizer==2.0.12
